/*
 * Copyright 2023 RobustMQ Team
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package meta.service.kv;

service KvService {
  rpc Set(SetRequest) returns (SetReply) {}

  rpc Delete(DeleteRequest) returns (DeleteReply) {}

  rpc Get(GetRequest) returns (GetReply) {}

  rpc Exists(ExistsRequest) returns (ExistsReply) {}

  rpc ListShard(ListShardRequest) returns (ListShardReply) {}

  rpc GetPrefix(GetPrefixRequest) returns (GetPrefixReply) {}
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetReply {}

message GetRequest {
  string key = 1;
}

message GetReply {
  string value = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteReply {}

message ExistsRequest {
  string key = 1;
}

message ExistsReply {
  bool flag = 1;
}

message ListShardRequest {
  string namespace = 1;
}

message ListShardReply {
  repeated string shards_info = 1;
}

message GetPrefixRequest {
  string prefix = 1;
}

message GetPrefixReply {
  repeated string values = 1;
}
